@@ -27,5 +27,3 @@ SEXP rpy_findFun(SEXP symbol, SEXP rho)
     }
     return R_UnboundValue;
 }
-
-
